# naija-geo

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: basic.rs
src/: error.rs  lga.rs  lib.rs  state.rs  zone.rs
src/data/: lgas.rs  mod.rs  states.rs  zones.rs
tests/: lga_tests.rs  state_tests.rs  zone_tests.rs
